--- a/yangtao-kotlin/app/src/main/res/layout/activity_ar.xml
+++ b/yangtao-kotlin/app/src/main/res/layout/activity_ar.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ar_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -36,7 +37,13 @@
             />
     </LinearLayout>
 
-
+    <View
+        android:id="@+id/ar_focus"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:visibility="invisible"
+        android:background="@drawable/focusview"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/ar_scan_button"
@@ -44,7 +51,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:layout_gravity="bottom|center_horizontal"
-        app:srcCompat="@drawable/ic_camera_alt_black_24dp"
+        app:srcCompat="@drawable/ic_camera_alt_white_24dp"
         android:layout_margin="@dimen/fab_margin"
         android:focusable="true" />
 
