--- a/yangtao-kotlin/app/src/main/res/layout/content_main.xml
+++ b/yangtao-kotlin/app/src/main/res/layout/content_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".hanzigrid.HanziGridActivity"
+    tools:showIn="@layout/activity_hanzi_grid">
 
     <TextView
         android:layout_width="wrap_content"
