--- a/yangtao-kotlin/app/src/main/res/menu/menu_main.xml
+++ b/yangtao-kotlin/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.mrklie.yangtao.MainActivity">
+    tools:context="com.mrklie.yangtao.hanzigrid.HanziGridActivity">
+
+    <item
+        android:id="@+id/action_scan_hanzi"
+        android:icon="@drawable/ic_scan_white_24dp"
+        android:orderInCategory="100"
+        android:title="@string/action_scan_hanzi"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="200"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
