--- a/yangtao-kotlin/app/src/main/res/layout/activity_ar.xml
+++ b/yangtao-kotlin/app/src/main/res/layout/activity_ar.xml
@@ -12,6 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/ar_debug_prediction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|start"
+        tools:text="汉" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="280dp"
