--- a/yangtao-kotlin/app/src/main/res/layout/activity_ar.xml
+++ b/yangtao-kotlin/app/src/main/res/layout/activity_ar.xml
@@ -17,6 +17,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
+        android:fontFamily="@font/noto_sans"
+        android:layout_margin="10dp"
+        android:textSize="30sp"
+
         tools:text="汉" />
 
     <LinearLayout
