--- a/yangtao-kotlin/app/src/main/res/layout/activity_ar.xml
+++ b/yangtao-kotlin/app/src/main/res/layout/activity_ar.xml
@@ -56,6 +56,19 @@
         android:visibility="invisible"
         android:background="@drawable/focusview"/>
 
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/ar_help_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_gravity="top|end"
+        app:srcCompat="@drawable/ic_live_help_white_24dp"
+        android:layout_margin="@dimen/fab_margin"
+        android:scaleX=".7"
+        android:scaleY=".7"
+        android:background="@color/colorGray"
+        android:focusable="true" />-->
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/ar_scan_button"
         android:layout_width="wrap_content"
@@ -65,6 +78,4 @@
         app:srcCompat="@drawable/ic_camera_alt_white_24dp"
         android:layout_margin="@dimen/fab_margin"
         android:focusable="true" />
-
-
 </FrameLayout>
