Make grid beter

--- a/yangtao-kotlin/app/src/main/res/drawable/frame_unscanned.xml
+++ b/yangtao-kotlin/app/src/main/res/drawable/frame_unscanned.xml
@@ -3,5 +3,5 @@
 android:shape="rectangle">
 <stroke
     android:width="4dp"
-    android:color="@color/colorAccent" />
+    android:color="@color/colorBlack" />
 </shape>
