--- a/yangtao-kotlin/app/src/main/res/drawable/frame_scanned.xml
+++ b/yangtao-kotlin/app/src/main/res/drawable/frame_scanned.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-android:shape="rectangle">
-<stroke
-    android:width="4dp"
-    android:color="@color/colorBlack" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item>
+        <rotate
+            android:fromDegrees="-45"
+            android:toDegrees="45"
+            android:pivotX="0%"
+            android:pivotY="1%" >
+            <shape android:shape="rectangle" >
+                <stroke
+                    android:width="10dp"
+                    android:color="#00000000" />
+
+                <solid android:color="#00ACED" />
+            </shape>
+        </rotate>
+    </item>
+</layer-list>
