--- a/yangtao-kotlin/app/src/main/res/layout/hanzi_grid_item.xml
+++ b/yangtao-kotlin/app/src/main/res/layout/hanzi_grid_item.xml
@@ -49,6 +49,7 @@
         android:layout_marginLeft="70dp"
         android:layout_marginTop="5dp"
         android:elevation="2dp"
+        android:visibility="invisible"
     app:srcCompat="@drawable/ic_star_yellow_24dp" />
 
 </RelativeLayout>
