--- a/yangtao-kotlin/app/src/main/res/xml/settings.xml
+++ b/yangtao-kotlin/app/src/main/res/xml/settings.xml
@@ -5,4 +5,8 @@
         app:key="showDebug"
         app:title="Enable debug views"/>
 
+    <SwitchPreferenceCompat
+        app:key="allowVertical"
+        app:title="Allows scanning vertical planes"/>
+
 </PreferenceScreen>
